# JVST3

./: .gitignore  README.md
jni/: SimpleEQ.jucer
jni/Builds/MacOSX/: Info-AU.plist
jni/Builds/MacOSX/SimpleEQ.xcodeproj/: project.pbxproj
jni/Builds/MacOSX/SimpleEQ.xcodeproj/project.xcworkspace/xcuserdata/thomassantoni.xcuserdatad/: UserInterfaceState.xcuserstate
jni/Builds/MacOSX/SimpleEQ.xcodeproj/xcshareddata/xcschemes/: SimpleEQ - Standalone Plugin.xcscheme
jni/Builds/MacOSX/SimpleEQ.xcodeproj/xcuserdata/thomassantoni.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
jni/Builds/MacOSX/SimpleEQ.xcodeproj/xcuserdata/thomassantoni.xcuserdatad/xcschemes/: xcschememanagement.plist
jni/Java/JNIJuce/src/: Main.java  PluginScanner.java
jni/JuceLibraryCode/: JucePluginDefines.h
jni/Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
samples/: App.java  Information.cpp  conversions_Java_C++_JNI.md  libinformation.jnilib  readme.md  samples_App.h
samples/macos/: App.java
